[package]
name = "n"
description = "newfile (n) - A very simple utility to create files and folders"
readme = "README.md"
authors = ["Laurynas Keturakis <hi@laurynas.cc>"]
homepage = "https://github.com/keturiosakys/n"
repository = "https://github.com/keturiosakys/n"
categories = ["command-line-utilities"]
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.8", features = ["derive"] }
